--- a/index.html
+++ b/index.html
@@ -3,75 +3,68 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>M00dylyricist | Avinash Kumaar</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-  <link rel="stylesheet" href="./ind.css">
+  <title>Avinash Kumaar</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-xl navbar-light">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-    <a class="navbar-brand" href="index.html"><img src="./img/logo.png"></a>
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-        <li class="nav-item active">
-          <a class="nav-link" href="index.html">HOME <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="aboutme.html">ABOUT ME</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-  <div class="container">
-    <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade" data-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <a href="https://youtu.be/KMDh2hDAoKM" target="_blank"><img class="d-block w-100" src="./img/slide1.jpg" alt="First slide"></a>
-        </div>
-        <div class="carousel-item">
-          <a href="https://youtu.be/B3U5RO4gjGw" target="_blank"><img class="d-block w-100" src="./img/slide2.jpg" alt="Second slide"></a>
-        </div>
-        <div class="carousel-item">
-          <a href="https://youtu.be/6pc-knD_jAo" target="_blank"><img class="d-block w-100" src="./img/slide3.jpg" alt="Third slide"></a>
-        </div>
+  <header>
+    <div class="container">
+      <div id="logo">
+        <img src="./img/logo.png" alt="logo">
       </div>
-    </div>
-    <div class="row ">
-      <div class="col-lg"><img class="img-thumbnail rounded" src="./img/quote1.jpg"></div>
-      <div class="col-lg"><img class="img-thumbnail rounded" src="./img/quote2.jpg"></div>
-      <div class="col-lg"><img class="img-thumbnail rounded" src="./img/quote4.jpg"></div>
-      <div class="col-lg"><a href="https://www.yourquote.in/avinaash-kumaar-4z6/quotes/" target="_blank"><img class="img-thumbnail rounded" src="./img/quote3.jpg" id="more"></a>
-        <div id='more_text'><a href="https://www.yourquote.in/avinaash-kumaar-4z6/quotes/"> more..</a></div>
-      </div>
-    </div>
-    <div class="d-flex justify-content-center video">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/KMDh2hDAoKM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-    </div>
+      <nav>
+        <ul>
+          <li class="current"><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+        </ul>
+      </nav>
   </div>
-
-  <nav class="navbar navbar-expand-sm navbar-light">
-    <div>
-      <p class="font"> © 2018 M00dylricist.</p>
+  </header>
+  <section>
+    <div class="showcase">
+      <h1>I am Avinash Kumaar</h1>
+      <hr>
+      <p>A Songwriter , Singer & Learning Japanese 日本語.</p>
     </div>
-    <div class="navbar">
-      <ul class="navbar-nav">
-        <li class="nav-item social"><a href=""><img src=./social/facebook.png></a></li>
-        <li class="nav-item social"><a href=""><img src=./social/twitter.png></a></li>
-        <li class="nav-item social"><a href=""><img src="./social/pinterest.png"></a></li>
-        <li class="nav-item social"><a href=""><img src="./social/instagram.png"></a></li>
-      </ul>
+  </section>
+
+  <section>
+    <div class="box cf">
+      <h3> Some Lines </h3>
+      <div>
+        <img src="./img/quote1.jpg" alt="quote1">
+      </div>
+      <div>
+        <img src="./img/quote2.jpg" alt="quote1">
+      </div>
+      <div>
+        <img src="./img/quote3.jpg" alt="quote1">
+      </div>
+      <div>
+        <img src="./img/quote4.jpg" alt="quote1">
+      </div>
+       <a href="https://www.yourquote.in/avinaash-kumaar-4z6/quotes/"><button type="button" name="button">More.. </button></a>
     </div>
-  </nav>
 
+  </section>
+  <section>
+    <div class="videos">
+      <h3>Work as a Songwriter</h3>
+      <div class="player">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/KMDh2hDAoKM?rel=0&amp;controls=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      </div>
+      <div class="player">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/B3U5RO4gjGw?rel=0&amp;controls=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      </div>
+    </div>
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+  </section>
+  <footer>
+    <p>© 2018 M00dylricist.</p>
+  </footer>
 </body>
 
 </html>
