--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
   <section>
     <div class="videos">
       <h3>Work as a Songwriter</h3>
-      <div class="player">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/KMDh2hDAoKM?rel=0&amp;controls=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-      </div>
-      <div class="player">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/B3U5RO4gjGw?rel=0&amp;controls=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-      </div>
+      <a href="https://www.youtube.com/watch?v=KMDh2hDAoKM" target="_blank">
+        <img src="./img/video1.png" alt="">
+      </a>
+      <a href="https://www.youtube.com/watch?v=B3U5RO4gjGw" target="_blank">
+        <img src="./img/video2.png" alt="">
+      </a>
     </div>
 
   </section>
